# prism

./: CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: main.c.AE618AF47A8B1BCA.idx  utils.c.AE5D76C24C9AEBD7.idx  utils.h.F7A6043A55B1EFFF.idx
src/: main.c  utils.c  utils.h
